# libgcp

./: .gitignore  Makefile.am  README  configure.ac  description-pak
doc/: .gitignore  Makefile.am  gcp-spec.tex  prog-guide.tex
src/: .gitignore  Doxyfile  Makefile.am  crc.c  crc.h  crc16.c  crc16.h  gcp.c  gcp.h
