# GCP (Generic Communications Protocol) Library

# Copyright (C) 2012 Jonathan Lamothe <jonathan@jlamothe.net>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with this program.  If not, see:
# http://www.gnu.org/licenses/

lib_LTLIBRARIES = libgcp.la

libgcp_la_SOURCES = crc16.c gcp.c
libgcp_la_LDFLAGS = -version-info 0:0:0

include_HEADERS = crc16.h gcp.h

EXTRA_DIST = Doxyfile

# jl
